--- a/WebRoot/login.html
+++ b/WebRoot/login.html
@@ -98,6 +98,20 @@
 
 			</form>	
 		</div>
+		
+		<!-- firebase部署代码 -->
+		<script src="https://www.gstatic.com/firebasejs/3.6.0/firebase.js"></script>
+		<script>
+		  // Initialize Firebase
+		  var config = {
+		    apiKey: "AIzaSyCLybeU-mXhEckgTkDTYGnF4DnK8I2RfQo",
+		    authDomain: "mynote-ffa85.firebaseapp.com",
+		    databaseURL: "https://mynote-ffa85.firebaseio.com",
+		    storageBucket: "mynote-ffa85.appspot.com",
+		    messagingSenderId: "329246210612"
+		  };
+		  firebase.initializeApp(config);
+		</script>
 
 		<!-- backstretch 插件脚本 -->
 		<script>
